@@ -103,6 +103,14 @@
 #          Default:  stderr
 #          Example:  TRACE_FILE  ${HOME}/mytrace.log
 
+# Environment name:  COB_CURRENT_DATE
+#   Parameter name:  current_date
+#          Purpose:  specify an alternate Date/Time to be returned to ACCEPT clauses
+#                    this is used for testing purposes
+#             Type:  numeric string in format YYYYDDMMHH24MISS
+#          Default:  the operating system date is used
+#          Example:  COB_CURRENT_DATE "2016/03/16 16:40:52"
+
 #
 ## Call environment
 #
