@@ -357,6 +357,10 @@
 	* common.h, move.c, termio.c: replaced PICTURE strings containing packed
 	  ints with array of (cob_pic_symbol) structs which are easier to use.
 
+2016-05-01 Ron Norman <rjn@inglenet.com>
+
+	* common.c fixed incorrect reporting of error for undefined environment variables
+
 2016-04-26  Brian Tiffin <btiffin@gnu.org>
 
 	* common.c, common.h: Re-fixed CBL_OC_HOSTED tzname, timezone, daylight
@@ -395,6 +399,11 @@
 
 	* common.c (cob_set_location, cob_trace_section, cob_exit_common): fix for
 	  bug #216 - store a duplicate of cob_last_sfile for tracing, free on exit
+
+2016-03-15  Ron Norman <rjn@inglenet.com>
+
+	* common.c: display COB_PRE_LOAD as set and as evaluated
+	* call.c: clear COB_PRE_LOAD value before evaluating
 
 2016-03-13  Simon 'sf-mensch/human' Sobisch <simonsobisch@gnu.org>
 
